# PoseCap

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  GUIDELINES.md  README.md  WORKFLOW.md  pyproject.toml
.agents/: agentic-state.json
.agents/skills/ad-adr/: SKILL.md
.agents/skills/ad-architecture/: SKILL.md
.agents/skills/ad-archive/: SKILL.md
.agents/skills/ad-audit/: SKILL.md
.agents/skills/ad-bootstrap/: SKILL.md
.agents/skills/ad-commit/: SKILL.md
.agents/skills/ad-deepen/: SKILL.md
.agents/skills/ad-diagnose/: SKILL.md
.agents/skills/ad-domain/: SKILL.md
.agents/skills/ad-grill/: SKILL.md
.agents/skills/ad-ground/: SKILL.md
.agents/skills/ad-guidelines/: SKILL.md
.agents/skills/ad-handoff/: SKILL.md
.agents/skills/ad-hooks/: SKILL.md
.agents/skills/ad-merge/: SKILL.md
.agents/skills/ad-next/: SKILL.md
.agents/skills/ad-philosophy/: SKILL.md
.agents/skills/ad-pr/: SKILL.md
.agents/skills/ad-prd/: SKILL.md
.agents/skills/ad-review/: SKILL.md
.agents/skills/ad-spec/: SKILL.md
.agents/skills/ad-spike/: SKILL.md
.agents/skills/ad-subagent/: SKILL.md
.agents/skills/ad-task/: SKILL.md
.agents/skills/ad-tdd/: SKILL.md
.agents/skills/ad-tdg/: SKILL.md
.claude/: agentic-state.json
.claude/agents/: fresh-context-reviewer.md
.claude/skills/ad-adr/: SKILL.md
.claude/skills/ad-architecture/: SKILL.md
.claude/skills/ad-archive/: SKILL.md
.claude/skills/ad-audit/: SKILL.md
.claude/skills/ad-bootstrap/: SKILL.md
.claude/skills/ad-commit/: SKILL.md
.claude/skills/ad-deepen/: SKILL.md
.claude/skills/ad-diagnose/: SKILL.md
.claude/skills/ad-domain/: SKILL.md
.claude/skills/ad-grill/: SKILL.md
.claude/skills/ad-ground/: SKILL.md
.claude/skills/ad-guidelines/: SKILL.md
.claude/skills/ad-handoff/: SKILL.md
.claude/skills/ad-hooks/: SKILL.md
.claude/skills/ad-merge/: SKILL.md
.claude/skills/ad-next/: SKILL.md
.claude/skills/ad-philosophy/: SKILL.md
.claude/skills/ad-pr/: SKILL.md
.claude/skills/ad-prd/: SKILL.md
.claude/skills/ad-review/: SKILL.md
.claude/skills/ad-spec/: SKILL.md
.claude/skills/ad-spike/: SKILL.md
.claude/skills/ad-subagent/: SKILL.md
.claude/skills/ad-task/: SKILL.md
.claude/skills/ad-tdd/: SKILL.md
.codex/agents/: fresh-context-reviewer.toml
.github/workflows/: ci.yml
addon/: blender_manifest.toml
addon/posecap_addon/: apply_timer.py  character_setup.py  character_setup_panel.py  engine_process.py  instrumentation.py  keyframe_io.py  keyframe_manager.py  model_setup.py  model_setup_panel.py  onboarding.py  panel_text.py  panels.py  pear_root.py  recording.py  stream_client.py
contracts/: pyproject.toml
contracts/src/corridorrig_contracts/: __init__.py  codec.py  errors.py  frames.py  job.py  serial.py
contracts/src/posecap_contracts/: __init__.py  errors.py  frames.py  model_assets.py
core/: pyproject.toml
core/src/corridorrig_core/: __init__.py  application.py  errors.py  orientation.py  ports.py  rotation.py  skeleton.py
core/src/posecap_core/: __init__.py  application.py  errors.py  filters.py  orientation.py  ports.py  retarget.py  rotation.py  skeleton.py  smoothing.py
doc/: workflows.md
doc/adr/: 0001-adopt-hexagonal-architecture.md  0002-tcp-json-stream-live-pose.md  0003-json-wire-format-ban-pickle.md  0004-uv-workspace-vendor-shared-packages.md  0005-pear-external-pinned-never-vendored.md  0006-license-split-gpl-addon-apache-libraries.md  0007-pear-windows-runtime-matrix.md
doc/guides/: character-setup.md  getting-started.md  live-capture.md  smplx-model-setup.md
doc/product/: PRD.md
doc/reference/: README.md  poc-verification.md
doc/specs/: 0001-live-webcam-pose-streaming.md
doc/tasks/: 0001-scaffold-workspace-and-contracts.md  0002-core-pose-math-and-ports.md  0003-engine-bridge-tcp-pear.md  0004-addon-live-stream-client.md  0005-record-mocap-keyframes.md  0006-installer-and-e2e-verification.md  0007-acquire-golden-sample-ground-truth.md  0007-pear-runtime-windows-matrix.md  0008-advanced-options-panel.md  0009-stream-reader-latest-wins-transport.md  0010-smplx-model-guided-setup.md  0011-extract-retarget-engine-to-core.md  0012-dedicated-onboarding-checklist-wizard.md  0013-end-to-end-tutorial-install-to-stream.md
engine/: pyproject.toml
engine/src/corridorrig_engine/: __init__.py
engine/src/posecap_engine/: __init__.py  capture.py  cli.py  config.py  doctor.py  errors.py  frame_sources.py  logging_config.py  pear_adapter.py  preview.py  stream_server.py  watchdog.py
packaging/: build_installer.ps1
packaging/installer/: bootstrap_install.ps1  posecap.iss.template
tests/: test_packaging_config.py  test_quality_gate_config.py
tests/addon/: test_apply_timer.py  test_build_extension.py  test_character_setup.py  test_character_setup_panel.py  test_engine_process.py  test_instrumentation.py  test_keyframe_io.py  test_keyframe_manager.py  test_model_setup.py  test_model_setup_panel.py  test_panel_text.py  test_pear_root.py  test_recording.py  test_stream_client.py  test_ui_state.py
tests/contracts/: conftest.py  test_job_status.py  test_model_assets.py  test_pose_frame_codec.py
tests/core/: test_application.py  test_filters.py  test_orientation.py  test_retarget.py  test_rotation.py  test_skeleton.py  test_smoothing.py
tests/engine/: test_capture.py  test_cli.py  test_doctor.py  test_frame_sources.py  test_gpu_environment.py  test_logging_config.py  test_pear_adapter.py  test_preview.py  test_source_stream_invariants.py  test_stream_server.py
tests/tools/: test_convert_target_armature.py  test_pose_orientation_diagnostic.py  test_repack_wheel.py
tools/: build_extension.py  check_licensed_binaries.py  convert_target_armature.py  diagnose_pose_orientation.py  repack_wheel.py
tools/install/: setup_pear_runtime.ps1
(+28 files in other folders)
