[project]
name = "posecap-core"
version = "0.1.0"
description = "PoseCap domain logic: pose mapping, keyframe policy, ports"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
  "posecap-contracts",
  "numpy>=1.26",
]

[tool.uv.sources]
posecap-contracts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/posecap_core"]
