[project]
name = "posecap-engine"
version = "0.1.0"
description = "PoseCap engine bridge: PEAR inference, TCP pose stream, batch jobs"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
  "posecap-contracts",
  "posecap-core",
]

[tool.uv.sources]
posecap-contracts = { workspace = true }
posecap-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/posecap_engine"]
