[project]
name = "posecap-engine"
version = "0.1.1"
description = "PoseCap engine bridge: PEAR inference, TCP pose stream, batch jobs"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
  "opencv-python>=4.10",
  "posecap-contracts",
  "posecap-core",
]

[project.scripts]
posecap-engine = "posecap_engine.cli:main"

[tool.uv.sources]
posecap-contracts = { workspace = true }
posecap-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/posecap_engine"]
